Symphonius/Symphonius.cydsn/REBUILD.log
--------------- Rebuild Started: 05/07/2020 19:07:17 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:271:65: error: 'noteFrac' undeclared (first use in this function)
                     onPeriod = (int) (60000.0 / (float) tempo * noteFrac);
                                                                 ^
main.c:271:65: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/07/2020 19:07:17 ---------------
